# home_work_19_2

./: data.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_rename_data_change_product_date_change_and_more.py  0003_alter_category_description_alter_product_description.py  0003_category_created_at.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product.html
catalog/templates/catalog/includes/: inc_product.html
config/: settings.py  urls.py
