[tool.poetry]
name = "home-work-19-2"
version = "0.1.0"
description = ""
authors = ["melde <mdv053@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
ipython = "^8.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
